.helm/adhoc/busybox.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busybox
  name: busybox
spec:
  containers:
  - name: busybox
    image: docker-registry.ebrains.eu/siibra/siibra-api:rc-worker
    imagePullPolicy: Always
    command:
    - /bin/bash
    args:
    - -c
    - "tail -f /dev/null"
    resources:
      limits:
        cpu: "2"
        memory: 4Gi
      requests:
        cpu: "2"
        memory: 1Gi
    volumeMounts:
    - mountPath: /siibra-api-volume
      name: data-volume
  restartPolicy: Never
  volumes:
  - name: data-volume
    persistentVolumeClaim:
      claimName: data-volume-claim
