.helm/adhoc/warm-cache-v4.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: warmup-pod-v4
  name: warmup-pod-v4
spec:
  containers:
  - name: warmup-container
    # while ebrains gets the docker registry sorted out
    # image: docker-registry.ebrains.eu/siibra/siibra-api:rc-worker-v4
    image: ghcr.io/fzj-inm1-bda/siibra-api:rc-worker-v4
    imagePullPolicy: Always
    command:
    - python
    args:
    - -c
    - from new_api import v3, warmup; warmup.warmup()
    resources:
      limits:
        cpu: "2"
        memory: 4Gi
      requests:
        cpu: "2"
        memory: 1Gi
    volumeMounts:
    - mountPath: /siibra-api-volume
      name: data-volume
  restartPolicy: Never
  volumes:
  - name: data-volume
    persistentVolumeClaim:
      claimName: data-volume-claim
