.helm/adhoc/warm-cache.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: warmup-pod
  name: warmup-pod
spec:
  containers:
  - name: warmup-container
    image: docker-registry.ebrains.eu/siibra/siibra-api:rc-worker
    imagePullPolicy: Always
    command:
    - python
    args:
    - -c
    - import siibra; siibra.cache.clear(); siibra.warm_cache(999)
    resources:
      limits:
        cpu: "4"
        memory: 4Gi
      requests:
        cpu: "4"
        memory: 1Gi
    volumeMounts:
    - mountPath: /siibra-api-volume
      name: data-volume
  restartPolicy: Never
  volumes:
  - name: data-volume
    persistentVolumeClaim:
      claimName: data-volume-claim
