.helm/adhoc/deprecated-hostname.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siibra-api-deprecated
  labels:
    name: siibra-api-deprecated
    deprecated: foo
spec:
  tls:
  - secretName: siibra-api-deprecated-secret
    hosts:
    - siibra-api-stable.apps.hbp.eu
  rules:
  - host: siibra-api-stable.apps.hbp.eu
    http:
      paths:
      - pathType: Prefix
        path: "/v1_0"
        backend:
          service:
            name: siibra-api-v1
            port: 
              number: 5000
  - host: siibra-api-stable.apps.hbp.eu
    http:
      paths:
      - pathType: Prefix
        path: "/v2_0"
        backend:
          service:
            name: siibra-api-v2
            port: 
              number: 5000
  - host: siibra-api-stable.apps.hbp.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prod-server-siibra-api-v4-server
            port: 
              number: 5000
