.helm/adhoc/ppd-ingress-emergency-fallback.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siibra-api-prod-canonical-backup
  labels:
    fallback: emergency
spec:
  ingressClassName: nginx
  tls:
  - secretName: siibra-api-ppd-cert-secret-backup
    hosts:
    - siibra-api.apps.ebrains.eu
  rules:
  - host: siibra-api.apps.ebrains.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ppd-server-siibra-api-v4-server
            port: 
              number: 5000
