.helm/adhoc/ppd-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siibra-api-prod-canonical
  labels:
    name: siibra-api-prod-canonical
spec:
  ingressClassName: nginx
  tls:
  - secretName: siibra-api-ppd-cert-secret
    hosts:
    - siibra-api.apps.rke2-3-adacloud.tc.humanbrainproject.eu
  rules:
  - host: siibra-api.apps.rke2-3-adacloud.tc.humanbrainproject.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ppd-server-siibra-api-v4-server
            port: 
              number: 5000
